--- a/README.org
+++ b/README.org
@@ -5,6 +5,7 @@
 #+OPTIONS: ^:{}
 
 
+
 | 名称                               | 作者、译者                     | 地址                                                                  |
 |------------------------------------+--------------------------------+-----------------------------------------------------------------------|
 | [[https://github.com/astaxie/build-web-application-with-golang/blob/master/ebook/preface.md][Go Web 编程]]                        | astaxie                        | https://github.com/astaxie/build-web-application-with-golang          |
@@ -22,4 +23,27 @@
 | [[ http://bonsaiden.github.io/JavaScript-Garden/zh/][JavaScript 秘密花园]]                | Ivo Wetzel(写作)和张易江(设计) | https://github.com/BonsaiDen/JavaScript-Garden                        |
 | [[http://algoviz.org/OpenDSA/][数据结构和算法教程 OpenDSA(英文版)]] |                                | https://github.com/OpenDSA/OpenDSA                                    |
 | [[ http://natureofcode.com/][The Nature of Code]]                 |                                | https://github.com/shiffman/The-Nature-of-Code                        |
+| Backbone.js入门教程第二版          | the5fire                       | https://github.com/the5fire/backbonejs-learning-note                  |
+| Django 最佳实践                    | brantyoung                     | https://github.com/brantyoung/zh-django-best-practices                |
+|                                    |                                |                                                                       |
+* 离线阅读
 
+[[./images/backbone.js.png]]
+[[./images/go.png]]
+[[./images/goweb.png]]
+[[./images/iOSBlogCN.png]]
+[[./images/node.js.png]]
+[[./images/objcio.png]]
+[[./images/swift.png]]
+
+把地址clone到Marboo目录下，即可在Marboo中离线阅读 :)
+
+#+BEGIN_SRC sh
+mkdir ~/Marboo/CC-Books
+git clone https://github.com/astaxie/build-web-application-with-golang ~/Marboo/CC-Books
+#+END_SRC
+
+* References
+- https://github.com/PlayTimeline/iS_free_book
+- http://www.oschina.net/project/tag/400/opensource-book
+- http://www.gitchina.org/industry-information/%E5%85%8D%E8%B4%B9%E7%9A%84%E7%BC%96%E7%A8%8B%E4%B8%AD%E6%96%87%E4%B9%A6%E7%B1%8D%E7%B4%A2%E5%BC%95.html
