《Mac开发配置手册》

--- a/README.org
+++ b/README.org
@@ -6,11 +6,12 @@
 
 | 名称                               | 作者、译者、发起者             | 地址                                                                  | 程序语言          |
 |------------------------------------+--------------------------------+-----------------------------------------------------------------------+-------------------|
+| [[http://aaaaaashu.gitbooks.io/mac-dev-setup/content/][Mac 开发配置手册]]                   | [[http://aaaaaashu.me/][Ashu]] | https://github.com/Aaaaaashu/Mac-dev-setup                            |                   |
 | [[http://zh-sphinx-doc.readthedocs.org/en/latest/][Sphinx 使用手册]]                    | [[https://github.com/xunxuny][xunxuny]]                        | https://github.com/xunxuny/zh-sphinx-doc                              | reStructured Text |
 | [[http://www.widuu.com/chinese_docker/index.html][Docker中文指南]]                     | [[https://github.com/widuu][widuu]]                          | https://github.com/widuu/chinese_docker                               |                   |
 | [[http://yeasy.gitbooks.io/docker_practice/content/][Docker —— 从入门到实践]]             | [[https://github.com/yeasy][yeasy]]                          | https://github.com/yeasy/docker_practice                              |                   |
-| [[https://github.com/forhappy/A-Detailed-Cplusplus-Concurrency-Tutorial/blob/master/Table-of-contents.md][C++ 并发编程指南]]                   | forhappy                       | https://github.com/forhappy/A-Detailed-Cplusplus-Concurrency-Tutorial | C++               |
-| [[https://github.com/astaxie/build-web-application-with-golang/blob/master/ebook/preface.md][Go Web 编程]]                        | astaxie                        | https://github.com/astaxie/build-web-application-with-golang          | Go                |
+| [[https://github.com/forhappy/A-Detailed-Cplusplus-Concurrency-Tutorial/blob/master/Table-of-contents.md][C++ 并发编程指南]]                   | [[https://github.com/forhappy][forhappy]]                       | https://github.com/forhappy/A-Detailed-Cplusplus-Concurrency-Tutorial | C++               |
+| [[https://github.com/astaxie/build-web-application-with-golang/blob/master/ebook/preface.md][Go Web 编程]]                        | [[https://github.com/astaxie][astaxie]]                        | https://github.com/astaxie/build-web-application-with-golang          | Go                |
 | Go编程基础                         | Unknwon                        | https://github.com/Unknwon/go-fundamental-programming                 | Go                |
 | [[https://github.com/Unknwon/the-way-to-go_ZH_CN/blob/master/eBook/preface.md][Go入门指南]]                         | Unknwon                        | https://github.com/Unknwon/the-way-to-go_ZH_CN                        | Go                |
 | [[http://nqdeng.github.io/7-days-nodejs/][七天学会NodeJS]]                     | nqdeng                         | https://github.com/nqdeng/7-days-nodejs                               | Node.js           |
@@ -29,7 +30,7 @@
 | [[http://sicp.readthedocs.org/][SICP 解题集]]                        | 黄健宏                         | https://github.com/huangz1990/SICP-answers                            |                   |
 | [[http://tengine.taobao.org/book/index.html][Nginx开发从入门到精通]]              | taobao                         | https://github.com/taobao/nginx-book                                  |                   |
 | [[http://algoviz.org/OpenDSA/][数据结构和算法教程 OpenDSA(英文版)]] |                                | https://github.com/OpenDSA/OpenDSA                                    |                   |
-| [[ http://natureofcode.com/][The Nature of Code]]                 |                                | https://github.com/shiffman/The-Nature-of-Code                        |                   |
+| [[ http://natureofcode.com/][The Nature of Code]]                 | shiffman                       | https://github.com/shiffman/The-Nature-of-Code                        |                   |
 | [[http://inthecloud.readthedocs.org/][In the Cloud(一本云计算入门手册)]]   | lofyer                         | https://github.com/lofyer/InTheCloud                                  |                   |
 | [[https://github.com/royguo/ml_hackers/blob/master/list.md][Machine Learning For Hackers中文版]] | royguo                         | https://github.com/royguo/ml_hackers                                  |                   |
 | [[http://softwaredownload.gitbooks.io/openwrt-fanqiang/][OpenWrt教程]]                        |                                | https://github.com/softwaredownload/openwrt-fanqiang                  |                   |
